--- a/src/main.scss
+++ b/src/main.scss
@@ -3,8 +3,8 @@
   --background-1: #002B36;
   --background-2: #083642;
 
-  --foreground-color: #FDF6E3;
-  --highlight-color: #2AA198;
+  --foreground-color: #2AA198;
+  --highlight-color: #FDF6E3;
   --border-color: #00252e;
   --pre-color: #d6dbdb;
 
