--- a/stylekit.scss
+++ b/stylekit.scss
@@ -14,7 +14,7 @@
   --sn-stylekit-neutral-color: #989898;
   --sn-stylekit-neutral-contrast-color: white;
 
-  --sn-stylekit-info-color: #e1d7b7;
+  --sn-stylekit-info-color: #086DD6;
   --sn-stylekit-info-contrast-color: white;
 
   --sn-stylekit-success-color: #2B9612;
@@ -27,11 +27,11 @@
   --sn-stylekit-danger-contrast-color: white;
 
   --sn-stylekit-shadow-color: #C8C8C8;
-  --sn-stylekit-background-color: #eee8d5;
+  --sn-stylekit-background-color: white;
   --sn-stylekit-border-color: #e3e3e3; // For borders inside background-color
   --sn-stylekit-foreground-color: black;
   // Colors for layers placed on top of non-prefixed background, border, and foreground
-  --sn-stylekit-contrast-background-color: #f0ebdb;
+  --sn-stylekit-contrast-background-color: #F6F6F6;
   --sn-stylekit-contrast-foreground-color: #2e2e2e;
   --sn-stylekit-contrast-border-color: #e3e3e3; // For borders inside contrast-background-color
 
@@ -44,7 +44,7 @@
   --sn-stylekit-secondary-contrast-foreground-color: #2e2e2e;
   --sn-styleki--secondary-contrast-border-color: #a2a2a2;
 
-  --sn-stylekit-editor-background-color: #fdf6e3;
+  --sn-stylekit-editor-background-color: var(--sn-stylekit-background-color);
   --sn-stylekit-editor-foreground-color: var(--sn-stylekit-foreground-color);
 
   --sn-stylekit-paragraph-text-color: #454545;
