--- a/src/main.scss
+++ b/src/main.scss
@@ -14,7 +14,7 @@
   --sn-stylekit-neutral-color: #989898;
   --sn-stylekit-neutral-contrast-color: white;
 
-  --sn-stylekit-info-color: #e1d7b7;
+  --sn-stylekit-info-color: #f6a200;
   --sn-stylekit-info-contrast-color: white;
 
   --sn-stylekit-success-color: #2B9612;
@@ -28,12 +28,12 @@
 
   --sn-stylekit-shadow-color: #C8C8C8;
   --sn-stylekit-background-color: #eee8d5;
-  --sn-stylekit-border-color: #e3e3e3; // For borders inside background-color
+  --sn-stylekit-border-color: #917d3b; // For borders inside background-color
   --sn-stylekit-foreground-color: black;
   // Colors for layers placed on top of non-prefixed background, border, and foreground
   --sn-stylekit-contrast-background-color: #f0ebdb;
   --sn-stylekit-contrast-foreground-color: #2e2e2e;
-  --sn-stylekit-contrast-border-color: #e3e3e3; // For borders inside contrast-background-color
+  --sn-stylekit-contrast-border-color: #917d3b; // For borders inside contrast-background-color
 
   // Alternative set of background and contrast options
   --sn-stylekit-secondary-background-color: #F6F6F6;
