--- a/src/main.scss
+++ b/src/main.scss
@@ -14,7 +14,7 @@
   --sn-stylekit-neutral-color: #989898;
   --sn-stylekit-neutral-contrast-color: white;
 
-  --sn-stylekit-info-color: #f6a200;
+  --sn-stylekit-info-color: #F6A200;
   --sn-stylekit-info-contrast-color: white;
 
   --sn-stylekit-success-color: #2B9612;
